# pretty-tables

./: CMakeLists.txt  README.md
example/: test.cpp
include/: prettytables.hpp
include/tia/: prettytables.hpp
sources/: prettytables.cpp
